--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,10 +1,920 @@
-@import 'helpers';
+@import 'header';
+@import 'footer';
 
-#app {
-  min-height: 1000px;
-  background: url('../images/bg.jpeg');
+/*--------------------*/
+/* BASIC TYPOGRAPHY */
+/*--------------------*/
+
+body,
+html {
+	overflow-x:hidden;
 }
 
-* {
-  color: white;
+body {
+	font-family: 'Raleway', sans-serif;
+	color: #666666;
+	font-size: 16px;
+	font-weight: 400;
+}
+
+ul {
+	padding: 0;
+	margin: 0;
+}
+
+ul li {
+	list-style: disc;
+	font-size: 17px;
+	line-height: 1.59;
+}
+
+a {
+	text-decoration: none;
+	color: #2f2f2f;
+}
+
+a:hover,
+a:focus {
+	outline: none;
+	text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: 'Raleway', sans-serif;
+	font-weight: 700;
+	margin-top: 0;
+}
+
+h1 {
+	font-size: 38px;
+}
+
+h2 {
+	font-size: 32px;
+	line-height: 1.13;
+}
+
+h3 {
+	font-size: 26px;
+}
+
+h4 {
+	font-size: 22px;
+}
+
+h5 {
+	font-size: 20px;
+}
+
+h6 {
+	font-size: 18px;
+}
+
+img {
+	border: none;
+	max-width: 100%;
+}
+
+code {
+	background-color: #ee6e73;
+	border-radius: 2px;
+	color: #fff;
+	padding: 2px 4px;
+}
+
+pre {
+	background-color: #f8f8f8;
+	border: 1px solid #eee;
+	border-radius: 4px;
+	padding: 10px;
+}
+
+pre code {
+	background-color: transparent;
+	color: #333333;
+}
+
+del{
+	text-decoration-color: #ee6e73;
+}
+
+kbd {
+	background-color: #ddd;
+	padding: 4px 6px;
+	border-radius: 2px;
+	// color: ;
+}
+
+address {
+	line-height: 1.5;
+	padding-left: 10px;
+}
+
+dl dt {
+	font-weight: 700;
+}
+
+dl dd {
+	margin-left: 0;
+}
+
+blockquote {
+	background-color: #f8f8f8;
+	border-radius: 0 4px 4px 0;
+	color: #323232;
+	padding: 15px 15px;
+	border-left: 5px solid #0091ea;
+	font-weight: 600;
+}
+
+blockquote p {
+	margin-top: 10px;
+}
+
+button {
+	padding: 5px 15px;
+	border: none;
+}
+
+button:focus {
+	outline: none;
+	border: none;
+}
+
+iframe {
+	border: none;
+}
+
+@media (min-width: 992px) {
+  .dropdown:hover .dropdown-menu {
+      display: block;
+      margin-top: 0;
+      top: 100%;
+   }
+}
+
+@media (max-width: 991px) {
+
+	.mu-navbar-nav {
+		display: flex;
+		text-align: left;
+		width: 100%;
+		margin-top: 10px;
+	}
+
+	.mu-navbar-nav li {
+		margin-bottom: 10px;
+	}
+
+	.mu-navbar .navbar-toggler {
+		color: #fff;
+		border-color: #fff;
+		cursor: pointer;
+		padding: 10px 15px;
+	}
+
+	.mu-single-slide-content-area {
+		padding: 6% 10%;
+	}
+
+	.mu-single-slide-content h1 {
+		font-size: 35px;
+		margin-bottom: 20px;
+	}
+
+	.mu-primary-btn {
+		padding: 15px 40px;
+	}
+
+	.mu-single-slide-content a {
+		margin-top: 15px;
+	}
+
+	.mu-title {
+		padding: 0 10%;
+	}
+
+	.mu-call-to-action-left {
+		max-width: 65%;
+	}
+
+	.mu-single-service-content {
+		width: 70%;
+		margin-left: 10px;
+	}
+
+	.mu-video-iframe-area {
+		padding: 12% 5%;
+	}
+
+	.mu-video-iframe-area iframe {
+		width: 100%;
+	}
+
+	.mu-video-close-btn {
+		right: 20px;
+		top: -40px;
+	}
+
+	.mu-video-right {
+		padding-right: 5%;
+		padding-left: 15px;
+	}
+
+	.mu-single-counter span {
+		padding: 20px 10px;
+	}
+
+	.mu-single-counter-content {
+		padding-left: 10px;
+		padding-top: 15px;
+	}
+
+	.counter-value {
+		font-size: 25px;
+	}
+
+	.mu-counter-name {
+		font-size: 16px;
+	}
+
+	.mu-filter-item-content {
+		padding-top: 22%;
+	}
+
+	.mu-pricing-table > li {
+		margin: 0 10px;
+		width: 29%;
+	}
+
+	.mu-pricing-single-content ul li {
+		padding: 0 5px;
+	}
+
+	.mu-pricing-single-title h3 {
+		font-size: 20px;
+	}
+
+	.mu-single-pricebox h4 {
+		font-size: 35px;
+	}
+
+	.mu-buy-now-btn,
+	.mu-standard-pricing .mu-buy-now-btn {
+		font-size: 16px;
+		padding: 8px 25px;
+	}
+
+	.mu-standard-pricing .mu-pricing-single {
+		padding: 20px 20px;
+	}
+
+	.mu-testimonials-area {
+		padding: 100px 0 125px;
+	}
+
+	.mu-blog-item-content {
+		padding: 15px 15px;
+	}
+
+	.mu-newsletter-content {
+		padding: 0 20%;
+	}
+
+	.mu-social-media a {
+		margin-bottom: 10px;
+	}
+
+	.mu-clients-area {
+		padding: 50px 0;
+	}
+
+	/*About US page */
+
+	#mu-skills {
+		background-position: inherit;
+	}
+
+	/*Contact us page*/
+
+	.mu-contact-content {
+		padding: 0 22%;
+	}
+
+	/*Blog Page*/
+
+	.mu-popular-content-widget .media > .mu-popular-post-img {
+		width: 75px;
+		margin-right: 5px;
+	}
+
+	.mu-sidebar-widget-title {
+		font-size: 22px;
+	}
+
+	.mu-sidebar-subscribe-widget .mu-subscribe-form input {
+		padding: 0 108px 0 15px;
+	}
+
+	.mu-sidebar-subscribe-widget .mu-subscribe-btn {
+		font-size: 12px;
+		width: 100px;
+	}
+
+	/*Error Page*/
+
+	.mu-error-area .mu-title {
+		padding: 0 10%;
+	}
+
+	.mu-error-content {
+		padding: 0;
+	}
+
+}
+
+@media (max-width: 767px) {
+
+	.mu-title {
+		padding: 0;
+	}
+
+	.mu-about-area {
+		padding: 60px 0;
+	}
+
+	.mu-about-right {
+		margin-top: 30px;
+	}
+
+	#mu-service {
+		padding: 60px 0 50px;
+	}
+
+	.mu-call-to-action-left {
+		max-width: 100%;
+	}
+
+	.mu-call-to-action-area {
+		text-align: center;
+		padding: 50px 0;
+	}
+
+	.mu-call-to-action-left h2 {
+		margin-bottom: 15px;
+	}
+
+	.mu-quote-btn {
+		float: none;
+		margin-top: 35px;
+	}
+
+	.mu-video-right {
+		padding-right: 5%;
+		padding: 10% 5%;
+	}
+
+	.mu-portfolio-area {
+		padding: 60px 0;
+	}
+
+	.mu-single-service {
+		margin-top: 20px;
+		margin-bottom: 20px;
+	}
+
+	.mu-single-service-content {
+		margin-left: 20px;
+	}
+
+	.mu-counter-area {
+		display: inline;
+		float: left;
+		padding: 50px 0;
+		width: 100%;
+	}
+
+	.mu-single-counter {
+		margin: 20px 20px;
+	}
+
+	#mu-pricing {
+		padding: 60px 0;
+	}
+
+	.mu-pricing-table > li,
+	.mu-pricing-table > li.mu-standard-pricing {
+		margin: 10px 0;
+		width: 100%;
+	}
+
+	.mu-standard-pricing .mu-pricing-single {
+		padding: 20px 0;
+	}
+
+	.mu-standard-pricing .mu-pricing-single-content {
+		padding: 35px 0 15px;
+	}
+
+	.mu-standard-pricing .mu-single-pricebox {
+		padding: 5px 0 25px;
+	}
+
+	.mu-title {
+		margin-bottom: 25px;
+	}
+
+	#mu-from-blog {
+		padding: 60px 0;
+	}
+
+	.mu-from-blog-content {
+		margin-top: 0;
+	}
+
+	.mu-blog-item {
+		margin-top: 15px;
+		margin-bottom: 15px;
+	}
+
+	.mu-footer-top {
+		padding: 30px 0 10px;
+	}
+
+	.mu-single-footer {
+		margin: 15px 0;
+	}
+
+	/*About Us page*/
+
+	#mu-skills {
+		padding: 60px 0;
+	}
+
+	.mu-single-skills {
+		margin-top: 15px;
+		margin-bottom: 15px;
+	}
+
+	.mu-team-area {
+		padding: 60px 0 50px;
+	}
+
+	.mu-single-team-content p {
+		font-size: 14px;
+	}
+
+	/*contact us*/
+
+	.mu-contact-content {
+		padding: 0 15%;
+	}
+
+	#mu-google-map iframe {
+		height: 350px;
+	}
+
+	/*Blog page*/
+
+	.mu-blog-sidebar {
+		margin-top: 50px;
+	}
+
+	.mu-popular-content-widget .media > .mu-popular-post-img {
+		width: 120px;
+		margin-right: 10px;
+	}
+
+	.mu-sidebar-subscribe-widget .mu-subscribe-form input {
+		padding: 0 170px 0 20px;
+	}
+
+	.mu-sidebar-subscribe-widget .mu-subscribe-btn {
+		font-size: 16px;
+		width: 160px;
+	}
+
+	/*Error Page*/
+
+	.mu-error-area .mu-title {
+		padding: 0;
+	}
+
+	.mu-text {
+		font-size: 225px;
+		line-height: 225px;
+	}
+
+	.mu-backdrop {
+		height: 280px;
+	}
+
+
+
+}
+
+
+@media (max-width: 640px){
+
+	.mu-single-slide-content h1 {
+		font-size: 25px;
+		margin-bottom: 10px;
+	}
+
+	.slick-next {
+		right: 10px;
+	}
+
+	.slick-prev {
+		left: 10px;
+	}
+
+	.mu-single-slide-content-area {
+		padding: 6% 0%;
+	}
+
+	.mu-single-slide-content a {
+		margin-top: 0;
+	}
+
+	.mu-single-slide-content p {
+		margin-bottom: 15px;
+	}
+
+	.mu-primary-btn {
+		padding: 12px 28px;
+		font-size: 14px;
+	}
+
+	.mu-video-left {
+		padding: 120px 0;
+	}
+
+	.mu-video-iframe-area {
+		padding: 5% 5%;
+	}
+
+	.mu-video-iframe-area iframe {
+		height: 300px;
+	}
+
+	.mu-video-close-btn {
+		top: 5px;
+		margin-top: 0;
+		height: 40px;
+		line-height: 35px;
+		width: 40px;
+	}
+
+	.mu-newsletter-content {
+		padding: 0;
+	}
+
+	.mu-single-counter {
+		margin: 20px 0;
+	}
+
+	/*contact us*/
+
+	.mu-contact-content {
+		padding: 0 5%;
+	}
+
+	#mu-google-map iframe {
+		height: 300px;
+	}
+
+}
+
+
+@media (max-width: 480px) {
+	.mu-single-slide-content a.mu-primary-btn {
+		display: none;
+	}
+
+	.mu-single-counter span {
+		float: none;
+	}
+
+	.mu-single-counter-content {
+		float: none;
+		display: inline-block;
+	}
+
+	.mu-title h2 {
+		font-size: 25px;
+		margin-bottom: 10px;
+	}
+
+	.mu-call-to-action-left h2 {
+		font-size: 20px;
+	}
+
+	.mu-filter-item-content {
+		padding-top: 29%;
+		font-size: 18px;
+	}
+
+	.filtr-item h4 {
+		font-size: 18px;
+	}
+
+	.mu-testimonials-area h2 {
+		font-size: 25px;
+	}
+
+	.mu-testimonials-block {
+		margin-top: 20px;
+	}
+
+	.mu-testimonial-slide li p {
+		font-size: 15px;
+	}
+
+	.mu-testimonials-area {
+		padding: 50px 0 50px;
+	}
+
+	.mu-subscribe-btn {
+		font-size: 16px;
+	}
+
+	.mu-video-play-btn {
+		height: 40px;
+		width: 60px;
+		font-size: 16px;
+		line-height: 40px;
+	}
+
+	.slick-next,
+	.slick-prev {
+		width: 40px;
+		height: 40px;
+	}
+
+	.slick-prev::before,
+	.slick-next::before {
+		font-size: 20px;
+	}
+
+	.scrollToTop {
+		font-size: 25px;
+		line-height: 43px;
+		width: 45px;
+		height: 45px;
+	}
+
+	.mu-navbar {
+		padding: 10px 0;
+	}
+
+	.mu-navbar .navbar-toggler {
+		padding: 5px 10px;
+	}
+
+	/*About Us page*/
+
+	.mu-page-header-area {
+		padding: 80px 0;
+	}
+
+	.mu-page-header-title {
+		font-size: 30px;
+	}
+
+	/*contact us*/
+
+	#mu-google-map iframe {
+		height: 250px;
+	}
+
+	/*Blog page*/
+
+	#mu-blog {
+		padding: 30px 0;
+	}
+
+	#mu-blog .mu-blog-item {
+		margin-bottom: 30px;
+	}
+
+	.mu-blog-pagination .pagination .page-link {
+		font-size: 16px;
+		width: 35px;
+		height: 35px;
+		line-height: 33px;
+	}
+
+	.mu-blog-pagination .pagination .page-item:first-child .page-link,
+	.mu-blog-pagination .pagination .page-item:last-child .page-link {
+		line-height: 38px;
+	}
+
+	.mu-blog-pagination .pagination {
+		float: none;
+	}
+
+	.mu-blog-sidebar {
+		margin-top: 30px;
+	}
+
+	.mu-sidebar-social-widget .mu-social-media a {
+		width: 35px;
+		height: 35px;
+		line-height: 35px;
+		font-size: 16px;
+	}
+
+	/*Error Page*/
+
+	.mu-error-area {
+		padding: 50px 0;
+	}
+
+	.mu-text {
+		font-size: 180px;
+		line-height: 180px;
+	}
+
+	.mu-backdrop {
+		height: 230px;
+	}
+
+
+}
+
+@media (max-width: 360px) {
+	.mu-single-slide-content h1 {
+		font-size: 18px;
+		margin-bottom: 5px;
+	}
+
+	.mu-single-slide-content p {
+		margin-bottom: 0;
+		font-size: 12px;
+	}
+
+	.mu-title h2 {
+		font-size: 22px;
+	}
+
+	.mu-video-iframe-area {
+		padding: 15% 5%;
+	}
+
+	.mu-video-right p {
+		font-size: 16px;
+		text-align: center;
+	}
+
+	.mu-filter-item-content {
+		padding-top: 26%;
+	}
+
+	.mu-subscribe-form input {
+		padding: 0 130px 0 20px;
+	}
+
+	.mu-subscribe-btn {
+		font-size: 14px;
+		width: 120px;
+	}
+
+	.mu-testimonial-slide .slick-next {
+		right: 0;
+	}
+
+	.mu-testimonial-slide .slick-prev {
+		left: 0;
+	}
+
+	/*About Us page*/
+
+	.mu-single-team {
+		text-align: center;
+		padding: 10px 0;
+	}
+
+	.mu-single-team-img,
+	.mu-single-team-content {
+		width: 100%;
+	}
+
+	/*Blog page*/
+
+	.mu-blog-pagination .pagination li {
+		margin: 0 3px;
+	}
+
+	.mu-popular-content-widget .media {
+		margin-bottom: 15px;
+	}
+
+	.mu-popular-content-widget .media > .mu-popular-post-img {
+		width: 85px;
+		margin-right: 5px;
+	}
+
+	.mu-sidebar-subscribe-widget .mu-subscribe-form input {
+		padding: 0 135px 0 15px;
+	}
+
+	.mu-sidebar-subscribe-widget .mu-subscribe-btn {
+		font-size: 16px;
+		width: 125px;
+	}
+
+	#respond input[type="text"],
+	#respond input[type="email"],
+	#respond input[type="url"] {
+		height: 35px;
+		padding: 0 5px;
+		margin-bottom: 5px;
+		width: 100%;
+	}
+
+	#respond textarea {
+		padding: 10px;
+		height: 150px;
+	}
+
+	.mu-related-post .mu-related-post-title {
+		font-size: 20px;
+		margin-bottom: 15px;
+	}
+
+	.mu-comments-area h2 {
+		margin-bottom: 10px;
+		font-size: 20px;
+	}
+
+	.mu-comments-area .comments .commentlist .children {
+		padding-left: 15px;
+	}
+
+	#respond .reply-title {
+		font-size: 22px;
+		padding-bottom: 5px;
+		margin-bottom: 20px;
+	}
+
+
+	h1 {
+		font-size: 30px;
+	}
+
+	h2 {
+		font-size: 25px;
+		line-height: 1.13;
+	}
+
+	h3 {
+		font-size: 20px;
+	}
+
+	h4 {
+		font-size: 18px;
+	}
+
+	h5 {
+		font-size: 16px;
+	}
+
+	h6 {
+		font-size: 14px;
+	}
+
+	/*Error Page*/
+
+	.mu-text {
+		font-size: 160px;
+		line-height: 160px;
+	}
+
+	.mu-backdrop {
+		height: 200px;
+	}
+
+
+
+}
+
+
+
+@media (max-width: 320px) {
+
+	.mu-single-slide-content-area {
+		padding: 2% 0%;
+	}
+
+	.mu-filter-item-content {
+		padding-top: 24%;
+	}
+
+
 }
