--- a/src/assets/styles/_basic.scss
+++ b/src/assets/styles/_basic.scss
@@ -8,136 +8,135 @@ body {
 	font-family: 'Raleway', sans-serif;
 	font-size: 16px;
 	font-weight: 400;
-}
 
-ul {
-	margin: 0;
-	padding: 0;
-}
+	ul {
+		margin: 0;
+		padding: 0;
 
-ul li {
-	font-size: 17px;
-	line-height: 1.59;
-	list-style: disc;
-}
+		li {
+			font-size: 17px;
+			line-height: 1.59;
+			list-style: disc;
+		}
+	}
+	a {
+		color: #2f2f2f;
+		text-decoration: none;
+		&:hover,
+		&:focus {
+			outline: none;
+			text-decoration: none;
+		}
+	}
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		font-family: 'Raleway', sans-serif;
+		font-weight: 700;
+		margin-top: 0;
+	}
 
-a {
-	color: #2f2f2f;
-	text-decoration: none;
-}
+	h1 {
+		font-size: 38px;
+	}
 
-a:hover,
-a:focus {
-	outline: none;
-	text-decoration: none;
-}
+	h2 {
+		font-size: 32px;
+		line-height: 1.13;
+	}
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	font-family: 'Raleway', sans-serif;
-	font-weight: 700;
-	margin-top: 0;
-}
+	h3 {
+		font-size: 26px;
+	}
 
-h1 {
-	font-size: 38px;
-}
+	h4 {
+		font-size: 22px;
+	}
 
-h2 {
-	font-size: 32px;
-	line-height: 1.13;
-}
+	h5 {
+		font-size: 20px;
+	}
 
-h3 {
-	font-size: 26px;
-}
+	h6 {
+		font-size: 18px;
+	}
 
-h4 {
-	font-size: 22px;
-}
+	img {
+		border: 0;
+		max-width: 100%;
+	}
 
-h5 {
-	font-size: 20px;
-}
+	code {
+		background-color: #ee6e73;
+		border-radius: 2px;
+		color: #fff;
+		padding: 2px 4px;
+	}
 
-h6 {
-	font-size: 18px;
-}
+	pre {
+		background-color: #f8f8f8;
+		border: 1px solid #eee;
+		border-radius: 4px;
+		padding: 10px;
+		code {
+			background-color: transparent;
+			color: #333;
+		}
+	}
 
-img {
-	border: 0;
-	max-width: 100%;
-}
 
-code {
-	background-color: #ee6e73;
-	border-radius: 2px;
-	color: #fff;
-	padding: 2px 4px;
-}
+	del{
+		text-decoration-color: #ee6e73;
+	}
 
-pre {
-	background-color: #f8f8f8;
-	border: 1px solid #eee;
-	border-radius: 4px;
-	padding: 10px;
-}
+	kbd {
+		background-color: #ddd;
+		border-radius: 2px;
+		padding: 4px 6px;
+	}
 
-pre code {
-	background-color: transparent;
-	color: #333;
-}
+	address {
+		line-height: 1.5;
+		padding-left: 10px;
+	}
 
-del{
-	text-decoration-color: #ee6e73;
-}
+	dl {
+		dt {
+			font-weight: 700;
+		}
 
-kbd {
-	background-color: #ddd;
-	border-radius: 2px;
-	padding: 4px 6px;
-}
+		dd {
+			margin-left: 0;
+		}
+	}
 
-address {
-	line-height: 1.5;
-	padding-left: 10px;
-}
+	blockquote {
+		background-color: #f8f8f8;
+		border-left: 5px solid #0091ea;
+		border-radius: 0 4px 4px 0;
+		color: #323232;
+		font-weight: 600;
+		padding: 15px 15px;
+		p {
+			margin-top: 10px;
+		}
+	}
 
-dl dt {
-	font-weight: 700;
-}
 
-dl dd {
-	margin-left: 0;
-}
+	button {
+		border: 0;
+		padding: 5px 15px;
 
-blockquote {
-	background-color: #f8f8f8;
-	border-left: 5px solid #0091ea;
-	border-radius: 0 4px 4px 0;
-	color: #323232;
-	font-weight: 600;
-	padding: 15px 15px;
-}
+		&:focus {
+			border: 0;
+			outline: none;
+		}
+	}
 
-blockquote p {
-	margin-top: 10px;
-}
-
-button {
-	border: 0;
-	padding: 5px 15px;
-}
-
-button:focus {
-	border: 0;
-	outline: none;
-}
-
-iframe {
-	border: 0;
+	iframe {
+		border: 0;
+	}
 }
