--- a/src/assets/styles/_media.scss
+++ b/src/assets/styles/_media.scss
@@ -120,8 +120,8 @@
 	}
 
 	.mu-navbar .navbar-toggler {
-		border-color: #fff;
-		color: #fff;
+		border-color: $white;
+		color: $white;
 		cursor: pointer;
 		padding: 10px 15px;
 	}
