--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,3 +1,15 @@
 //color
 $white: #fff;
-$strong_blue: #1c85c4;
+$strong_blue_1: #1c85c4;
+$strong_blue_2: #0277bd;
+$strong_blue_3: #3b5998;
+$strong_blue_5: #004f7f;
+$pure_blue: #0091ea;
+$soft_red: #ee6e73;
+$gray_light_1: #f8f8f8;
+$gray_light_2: #eee;
+$gray_light_3: #ddd;
+$gray_dark_1: #666;
+$gray_dark_2: #2f2f2f;
+$gray_dark_3: #333;
+$gray_dark_4: #323232;
