--- a/src/assets/styles/_basic.scss
+++ b/src/assets/styles/_basic.scss
@@ -1,6 +1,6 @@
 body,
 html {
-  color: $gray_dark_1;
+  color: $gray-dark-1;
   font-family: 'Raleway', sans-serif;
 	font-size: 16px;
 	font-weight: 400;
@@ -15,7 +15,7 @@ html {
 		}
 	}
 	a {
-		color: $gray_dark_2;
+		color: $gray-dark-2;
 		text-decoration: none;
 		&:hover,
 		&:focus {
@@ -57,26 +57,26 @@ html {
 		max-width: 100%;
 	}
 	code {
-		background-color: $soft_red;
+		background-color: $soft-red;
 		border-radius: 2px;
 		color: $white;
 		padding: 2px 4px;
 	}
 	pre {
-		background-color: $gray_light_1;
-		border: 1px solid $gray_light_2;
+		background-color: $gray-light-1;
+		border: 1px solid $gray-light-2;
 		border-radius: 4px;
 		padding: 10px;
 		code {
 			background-color: transparent;
-			color: $gray_dark_3;
+			color: $gray-dark-3;
 		}
 	}
 	del{
-		text-decoration-color: $soft_red;
+		text-decoration-color: $soft-red;
 	}
 	kbd {
-		background-color: $gray_light_3;
+		background-color: $gray-light-3;
 		border-radius: 2px;
 		padding: 4px 6px;
 	}
@@ -93,10 +93,10 @@ html {
 		}
 	}
 	blockquote {
-		background-color: $gray_light_1;
-		border-left: 5px solid $pure_blue;
+		background-color: $gray-light-1;
+		border-left: 5px solid $pure-blue;
 		border-radius: 0 4px 4px 0;
-		color: $gray_dark_4;
+		color: $gray-dark-4;
 		font-weight: 600;
 		padding: 15px 15px;
 		p {
