--- a/src/assets/styles/_footer.scss
+++ b/src/assets/styles/_footer.scss
@@ -6,7 +6,7 @@
 }
 
 .mu-footer-top {
-	background-color: $strong_blue_2;
+	background-color: $strong-blue-2;
 	display: inline;
 	float: left;
 	padding: 55px 0;
@@ -33,7 +33,7 @@
 }
 
 .mu-single-footer ul li {
-	border-bottom: 1px solid $strong_blue_1;
+	border-bottom: 1px solid $strong-blue-1;
 	font-size: 14px;
 	list-style: none;
 	margin-bottom: 10px;
@@ -75,7 +75,7 @@
 }
 
 .mu-footer-bottom {
-	background-color: $strong_blue_5;
+	background-color: $strong-blue-5;
 	display: inline;
 	float: left;
 	padding: 20px 0;
@@ -90,7 +90,7 @@
 }
 
 .mu-social-media {
-	border-top: 1px solid $strong_blue_1;
+	border-top: 1px solid $strong-blue-1;
 	display: inline;
 	float: left;
 	padding-top: 12px;
@@ -98,7 +98,7 @@
 }
 
 .mu-social-media a {
-	background-color: $strong_blue_3;
+	background-color: $strong-blue-3;
 	border: 1px solid #babcbe;
 	border-radius: 50%;
 	color: $white;
