--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,15 +1,15 @@
 //color
 $white: #fff;
-$strong_blue_1: #1c85c4;
-$strong_blue_2: #0277bd;
-$strong_blue_3: #3b5998;
-$strong_blue_5: #004f7f;
-$pure_blue: #0091ea;
-$soft_red: #ee6e73;
-$gray_light_1: #f8f8f8;
-$gray_light_2: #eee;
-$gray_light_3: #ddd;
-$gray_dark_1: #666;
-$gray_dark_2: #2f2f2f;
-$gray_dark_3: #333;
-$gray_dark_4: #323232;
+$strong-blue-1: #1c85c4;
+$strong-blue-2: #0277bd;
+$strong-blue-3: #3b5998;
+$strong-blue-5: #004f7f;
+$pure-blue: #0091ea;
+$soft-red: #ee6e73;
+$gray-light-1: #f8f8f8;
+$gray-light-2: #eee;
+$gray-light-3: #ddd;
+$gray-dark-1: #666;
+$gray-dark-2: #2f2f2f;
+$gray-dark-3: #333;
+$gray-dark-4: #323232;
