--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -13,3 +13,7 @@ $gray-dark-1: #666;
 $gray-dark-2: #2f2f2f;
 $gray-dark-3: #333;
 $gray-dark-4: #323232;
+$black: black;
+
+//fonts
+$font-dancing: 'Pacifico';
