--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Pacifico');
 @import 'variables';
 @import 'basic';
 @import 'header';
 @import 'media';
 @import 'footer';
+@import 'spinner';
