--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -23,6 +23,7 @@
 
 .mu-logo img {
 	margin-top: -5px;
+	width: 110px;
 }
 
 .mu-navbar .mu-logo:hover,
@@ -50,7 +51,8 @@
 }
 
 .mu-navbar {
-	padding: 20px 0;
+	height: 80px;
+	padding: 5px 0;
 }
 
 .mu-navbar-nav {
