--- a/src/assets/styles/spinner.scss
+++ b/src/assets/styles/spinner.scss
@@ -22,7 +22,7 @@
 .spinner-wrapper {
   left: 35%;
   position: absolute;
-  top: 35%;
+  top: 15%;
 }
 
 div.spinner-content {
@@ -39,6 +39,7 @@ div.spinner-content {
 
 .loading {
   margin-left: -13%;
+  margin-top: 20px;
 }
 
 .l1 {
