--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,3 +1,5 @@
+@import '~slick-carousel/slick/slick.css';
+@import '~slick-carousel/slick/slick-theme.css';
 @import url('https://fonts.googleapis.com/css?family=Pacifico');
 @import 'variables';
 @import 'helpers';
