--- a/src/assets/styles/_who-we.scss
+++ b/src/assets/styles/_who-we.scss
@@ -8,15 +8,13 @@
 .mu-about-area {
 	display: inline;
 	float: left;
-	padding: 100px 0;
+	padding: 0;
 	width: 100%;
 }
 
 .mu-title {
 	display: inline;
-	float: left;
 	margin-bottom: 35px;
-	padding: 0 25%;
 	text-align: center;
 	width: 100%;
 }
