--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,13 +1,14 @@
-@import '~slick-carousel/slick/slick.css';
-@import '~slick-carousel/slick/slick-theme.css';
 @import url('https://fonts.googleapis.com/css?family=Pacifico');
 @import 'variables';
 @import 'helpers';
 @import 'basic';
 @import 'header';
+@import 'slick';
 @import 'media';
 @import 'footer';
 @import 'spinner';
 @import 'contacts';
 @import 'not-found';
 @import 'who-we';
+@import 'slider';
+@import 'clients-say';
