--- a/src/assets/styles/_vacancies.scss
+++ b/src/assets/styles/_vacancies.scss
@@ -1,5 +1,5 @@
 #mu-vacancies {
-	background-color: #fff;
+	background-color: #e0dbdb;
 	display: inline;
 	float: left;
 	margin-bottom: 50px;
@@ -22,6 +22,7 @@
             color: $white;
 			font-size: 23px;
         }
+
         input {
             border: 0;
             border-radius: 2px;
@@ -47,10 +48,13 @@
 			padding: 20px 25px 25px;
 		}
 		.mu-vacancy {
-			border: 1px solid #000000;
-			padding: 15px 25px 5px;
+			box-shadow: 0px 2px 1px 0px rgba(0,0,0,0.1);
+			border-radius: 3px;
+			background-color: #fff;
+			padding: 7px 15px 10px;
+			height: 200px;
 			.title-vacancy {
-				color: #0000ff;
+				color: $strong-blue-2;
 				font-size: 25px;
 				line-height: 1.1;
 				margin-bottom: 10px;
@@ -58,12 +62,33 @@
 			.desc {
 				font-size: 13px;
 			}
+			.send-friend {
+				font-size: 13px;
+			}
+			.salary {
+				font-size: 25px;
+				color: $strong-blue-2;
+				margin: 0;
+			}
 			.city {
 				height: 80px;
+				font-size: 14px;
+			}
+			button {
+				text-transform: uppercase;
+				background-color: orange;
+				color: $white;
+				font-size: 13px;
+				padding: 5px 20px;
 			}
 			.date-added {
 				color: #808080;
 				font-size: 12px;
+			}
+			&:hover {
+				box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.2);
+				background-color: #fffed7;
+				cursor: pointer;
 			}
 		}
 	}
