--- a/src/assets/styles/_vacancies.scss
+++ b/src/assets/styles/_vacancies.scss
@@ -48,11 +48,11 @@
 			padding: 20px 25px 25px;
 		}
 		.mu-vacancy {
-			box-shadow: 0px 2px 1px 0px rgba(0,0,0,0.1);
-			border-radius: 3px;
 			background-color: #fff;
-			padding: 7px 15px 10px;
+			border-radius: 3px;
+			box-shadow: 0 2px 1px 0 rgba(0,0,0,0.1);
 			height: 200px;
+			padding: 7px 15px 10px;
 			.title-vacancy {
 				color: $strong-blue-2;
 				font-size: 25px;
@@ -66,28 +66,28 @@
 				font-size: 13px;
 			}
 			.salary {
-				font-size: 25px;
 				color: $strong-blue-2;
+				font-size: 25px;
 				margin: 0;
 			}
 			.city {
-				height: 80px;
 				font-size: 14px;
+				height: 80px;
 			}
 			button {
-				text-transform: uppercase;
-				background-color: orange;
+				background-color: #ffa500;
 				color: $white;
 				font-size: 13px;
 				padding: 5px 20px;
+				text-transform: uppercase;
 			}
 			.date-added {
 				color: #808080;
 				font-size: 12px;
 			}
 			&:hover {
-				box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.2);
 				background-color: #fffed7;
+				box-shadow: 0 2px 10px 0 rgba(0,0,0,0.2);
 				cursor: pointer;
 			}
 		}
