--- a/src/assets/styles/_vacancies.scss
+++ b/src/assets/styles/_vacancies.scss
@@ -47,7 +47,7 @@
 		.mu-filter {
 			padding: 7px 15px 10px;
 			.filter-salary {
-				color: #000000;
+				color: #000;
 				font-size: 18px;
 			}
 			.block-salary {
@@ -92,7 +92,12 @@
 			background-color: #fff;
 			border-radius: 3px;
 			box-shadow: 0 2px 1px 0 rgba(0,0,0,0.1);
-			padding: 7px 15px 10px;
+      padding: 7px 15px 10px;
+      &.vacancy-hot {
+				background-color: #fffed7;
+				box-shadow: 0 2px 10px 0 rgba(0,0,0,0.2);
+				cursor: pointer;
+      }
 			.title-vacancy {
 				color: $strong-blue-2;
 				font-size: 25px;
@@ -125,13 +130,13 @@
 			}
 			.city {
 				font-size: 14px;
-				height: 83px;
+				height: 90px;
 				&::before {
 					background: url('../images/location_mini.png') no-repeat 0 0;
 			    content: '';
 			    display: inline-block;
 			    height: 14px;
-					margin: 0 5px -2px 0;
+					margin: 0 10px -2px 0;
 			    width: 9px;
 				}
 			}
