--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -4,6 +4,7 @@ $strong-blue-1: #1c85c4;
 $strong-blue-2: #0277bd;
 $strong-blue-3: #3b5998;
 $strong-blue-5: #004f7f;
+$light-blue: #1da1f2;
 $pure-blue: #0091ea;
 $soft-red: #ee6e73;
 $gray-light-1: #f8f8f8;
@@ -13,7 +14,36 @@ $gray-dark-1: #666;
 $gray-dark-2: #2f2f2f;
 $gray-dark-3: #333;
 $gray-dark-4: #323232;
+$color-fuscous-gray-approx: #555;
+$vivid-scarlet: #dd4b39;
+$strong-amaranth: #bd081c;
+$vivid-red: #cd201f;
+$azureish-gray: #babcbe;
+$bluish-white: #fefeff;
+$luminous-vivid-orange: #ffa500;
+$medium-gray: #808080;
+$yellowish-white: #fffed7;
+$light-gray: #e5e5e5;
+$light-reddish-gray: #e0dbdb;
+$rgb-black: rgba (0 0 0);
+$rgb-gray: rgba (255 255 255);
+$rgb-chestnut: rgba (185 74 72);
+$opacity-01: .1;
+$opacity-02: .2;
+$opacity-03: .3;
+$opacity-05: .5;
+$rgb-01: ($rgb-black, $opacity-01);
+$rgb-02: ($rgb-black, $opacity-02);
+$rgb-03-chestnut: ($rgb-chestnut, $opacity-03);
+$rgb-05-gray: ($rgb-gray, $opacity-05);
 $black: #000;
-
+$medium-gray-1: #7e7e7e;
+$medium-gray-2: #ccc;
+$greenish-white: #dff0d8;
+$dark-green: #468847;
+$reddish-white: #f2dede;
+$strong-red: #b94a48;
+$very-light-gray: #ebebeb;
+$medium-gray-3: #959595;
 //fonts
 $font-dancing: 'Pacifico';
