--- a/src/assets/styles/_clients-say.scss
+++ b/src/assets/styles/_clients-say.scss
@@ -1,4 +1,4 @@
-#mu-testimonials {
+.mu-testimonials {
 	background-attachment: fixed;
 	background-image: url("../images/worker_slider.jpg");
 	background-position: center center;
@@ -9,8 +9,8 @@
 	width: 100%;
 }
 
-#mu-testimonials::before {
-	background: #0091ea;
+.mu-testimonials::before {
+	background: $pure-blue;
 	bottom: 0;
 	content: '';
 	left: 0;
@@ -32,7 +32,7 @@
 }
 
 .mu-testimonials-area h2 {
-	color: #fff;
+	color: $white;
 	text-align: center;
 	text-transform: uppercase;
 }
@@ -44,7 +44,7 @@
 	width: 100%;
 }
 
-.mu-testimonial-slide li{
+.mu-testimonial-slide li {
 	list-style: none;
 	text-align: center;
 }
@@ -56,12 +56,12 @@
 }
 
 .mu-testimonial-slide li p {
-	color: #fff;
+	color: $white;
 	padding: 0 10%;
 }
 
 .mu-testimonial-slide .mu-rt-img {
-	border: 4px solid #f8f8f8;
+	border: 4px solid $gray-light-1;
 	border-radius: 50%;
 	display: inline-block;
 	height: 75px;
@@ -70,7 +70,7 @@
 }
 
 .mu-rt-name {
-	color: #fff;
+	color: $white;
 	letter-spacing: 1px;
 	line-height: 1;
 	margin-bottom: 5px;
@@ -78,7 +78,7 @@
 }
 
 .mu-rt-title {
-	color: #fff;
+	color: $white;
 	font-size: 14px;
 }
 
@@ -88,7 +88,7 @@
 
 .mu-testimonial-slide .slick-dots li {
 	-webkit-transition: all 0.5s;
-	background-color: #f8f8f8;	
+	background-color: $gray-light-1;
 	height: 4px;
 	transition: all 0.5s;
 }
@@ -109,12 +109,12 @@
 .mu-testimonial-slide .slick-prev:focus,
 .mu-testimonial-slide .slick-next:hover,
 .mu-testimonial-slide .slick-next:focus {
-    color: #0091ea;
+    color: $pure-blue;
 }
 
 .mu-testimonial-slide .slick-prev:hover:before,
 .mu-testimonial-slide .slick-prev:focus:before,
 .mu-testimonial-slide .slick-next:hover:before,
 .mu-testimonial-slide.slick-next:focus:before {
-    color: #0091ea;
+    color: $pure-blue;
 }
