--- a/src/assets/styles/_helpers.scss
+++ b/src/assets/styles/_helpers.scss
@@ -16,12 +16,12 @@
   color: $strong-blue-2;
 }
 
-.inline-block{
+.inline-block {
   display: inline-block;
 }
 
 .c-black {
-  color: #000;
+  color: $black;
 }
 
 .c-white {
