--- a/src/assets/styles/_vacancies.scss
+++ b/src/assets/styles/_vacancies.scss
@@ -1,5 +1,5 @@
-#mu-vacancies {
-	background-color: #e0dbdb;
+.mu-vacancies {
+	background-color: $light-reddish-gray;
 	display: inline;
 	float: left;
 	margin-bottom: 50px;
@@ -29,7 +29,7 @@
 			width: 27%;
 		}
 		button {
-			background-color: #ffa500;
+			background-color: $luminous-vivid-orange;
 			color: $white;
 			font-size: 22px;
 			padding: 5px 75px;
@@ -47,7 +47,7 @@
 		.mu-filter {
 			padding: 7px 15px 10px;
 			.filter-salary {
-				color: #000;
+				color: $black;
 				font-size: 18px;
 			}
 			.block-salary {
@@ -68,34 +68,34 @@
 			}
 		}
 		.bread-dote {
-			background-color: #808080;
+			background-color: $medium-gray;
 		}
 		.how-vacancies {
 			background-color: $white;
 			padding: 2px 25px;
 			.city-work {
-				color: #323232;
+				color: $gray-dark-4;
 				font-size: 25px;
 			}
 			.mean-works {
-				color: #323232;
+				color: $gray-dark-4;
 				font-size: 18px;
 				margin-right: 10px;
 			}
 			.mean-salary {
-				color: #323232;
+				color: $gray-dark-4;
 				font-size: 18px;
 				margin-left: 10px;
 			}
 		}
 		.mu-vacancy {
-			background-color: #fff;
+			background-color: $white;
 			border-radius: 3px;
-			box-shadow: 0 2px 1px 0 rgba(0,0,0,0.1);
+			box-shadow: 0 2px 1px 0 ;
       padding: 7px 15px 10px;
       &.vacancy-hot {
-				background-color: #fffed7;
-				box-shadow: 0 2px 10px 0 rgba(0,0,0,0.2);
+				background-color: $yellowish-white;
+				box-shadow: 0 2px 10px 0 $rgb-02;
 				cursor: pointer;
       }
 			.title-vacancy {
@@ -141,7 +141,7 @@
 				}
 			}
 			button {
-				background-color: #ffa500;
+				background-color: $luminous-vivid-orange;
 				color: $white;
 				font-size: 13px;
 				padding: 5px 0;
@@ -158,12 +158,12 @@
 				}
 			}
 			.date-added {
-				color: #808080;
+				color: $medium-gray;
 				font-size: 12px;
 			}
 			&:hover {
-				background-color: #fffed7;
-				box-shadow: 0 2px 10px 0 rgba(0,0,0,0.2);
+				background-color: $yellowish-white;
+				box-shadow: 0 2px 10px 0 $rgb-02;
 				cursor: pointer;
 			}
 		}
@@ -191,8 +191,8 @@
 }
 
 .mu-about-right ul li h3 {
-	border-bottom: 3px solid #e5e5e5;
-	color: #323232;
+	border-bottom: 3px solid $light-gray;
+	color: $gray-dark-4;
 	display: inline-block;
 	font-size: 20px;
 	margin-bottom: 15px;
