--- a/src/assets/styles/counter.scss
+++ b/src/assets/styles/counter.scss
@@ -1,4 +1,4 @@
-#mu-counter {
+.mu-counter {
 	// background-image: url("assets/images/counter-bg.jpg");
 	background-size: cover;
 	display: inline;
@@ -7,8 +7,8 @@
 	width: 100%;
 }
 
-#mu-counter::before {
-	background-color: #0091ea;
+.mu-counter::before {
+	background-color: $pure-blue;
 	bottom: 0;
 	content: '';
 	left: 0;
@@ -26,7 +26,7 @@
 }
 
 .mu-counter-area h2 {
-	color: #fff;
+	color: $white;
 	text-align: center;
 }
 
@@ -44,8 +44,8 @@
 }
 
 .mu-single-counter span {
-	border-right: 1px solid #fff;
-	color: #fff;
+	border-right: 1px solid $white;
+	color: $white;
 	display: inline-block;
 	float: left;
 	font-size: 40px;
@@ -62,7 +62,7 @@
 }
 
 .counter-value {
-	color: #fff;
+	color: $white;
 	font-family: 'Helvetica', sans-serif;
 	font-size: 36px;
 	font-weight: 700;
@@ -72,7 +72,7 @@
 
 
 .mu-counter-name {
-	color: #fff;
+	color: $white;
 	font-size: 24px;
 	font-weight: 400;
 	text-transform: uppercase;
