--- a/src/assets/styles/counter.scss
+++ b/src/assets/styles/counter.scss
@@ -1,4 +1,4 @@
-.mu-counter {
+#mu-counter {
 	// background-image: url("assets/images/counter-bg.jpg");
 	background-size: cover;
 	display: inline;
@@ -7,12 +7,11 @@
 	width: 100%;
 }
 
-.mu-counter::before {
-	background-color: $pure-blue;
+#mu-counter::before {
+	background-color: $strong-blue-2;
 	bottom: 0;
 	content: '';
 	left: 0;
-	opacity: 0.65;
 	position: absolute;
 	right: 0;
 	top: 0;
